--- a/views/login.ejs
+++ b/views/login.ejs
@@ -2,24 +2,64 @@
 <html>
 
 	<head>
-		<meta charset="utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<!-- 设置初始缩放比例为1.0，使用设备宽度  -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no">
+		<!-- 在iOS下开启全屏模式  -->
+		<meta name="apple-mobile-web-app-capable" content="yes">
+		<!-- 隐藏 Sarafi 状态栏  -->
+		<meta name="apple-mobile-web-app-status-bar-style" content="black">
 		<title>登录页面</title>
+		<link rel="stylesheet" type="text/css" href="common.css" />
+		<link rel="stylesheet" type="text/css" href="css/login.css" />
 		<script src="ajax.js"></script>
 		<script>
 			window.onload = function() {
-				var loginBtn = document.getElementById("loginBtn");
-				var username = document.getElementById("username");
-				var password = document.getElementById("password");
+				var o_user = document.getElementById("username");
+				var o_pass = document.getElementById("password");
+				var o_loginBtn = document.getElementById("loginBtn");
+				o_loginBtn.onclick = function() {
+					if(o_user.value == '') {
+						alert("请输入用户名!");
+						o_loginBtn.onsubmit = null;
+					} else if(o_pass.value == '') {
+						alert("请输入密码!");
+						o_loginBtn.onsubmit = null;
+					} else {
+						window.location.href=document.URL+'index?username='+o_user.value+'&password='+o_pass.value;
+					}
+				}
 			}
 		</script>
 	</head>
 
 	<body>
-		<form action="/index" method="get">
-			<p><label>用户名：</label><input type="text" name="username" id="username" /></p>
-			<p><label>密码：</label><input type="password" name="password" id="password" /></p>
-			<input id="loginBtn" type="submit" value="登录" />
-		</form>
+		<div class="wrap">
+			<h1 class="title">开始登录</h1>
+			<table border="1">
+				<tr>
+					<td>
+						<label>用户名：</label>
+					</td>
+					<td>
+						<input type="text" name="username" id="username" />
+					</td>
+				</tr>
+				<tr>
+					<td>
+						<label>密码：</label>
+					</td>
+					<td>
+						<input type="password" name="password" id="password" />
+					</td>
+				</tr>
+				<tr>
+					<td colspan="2">
+						<button id="loginBtn" class="loginBtn">登录</button>
+					</td>
+				</tr>
+			</table>
+		</div>
 	</body>
 
 </html>
