--- a/www/common.css
+++ b/www/common.css
@@ -5,7 +5,7 @@ ul,ol,dl{list-style: none;}
 /* 重置a标签 */
 a{text-decoration: none;color: #000;}
 
-.wrap{width: 320px;max-width: 720px; margin: 0 auto;background: #ccc;height: 100%;}
+.wrap{width: 960px;height: 620px; margin: 150px auto 0;background: #ccc}
 
 
 /* 清理浮动 */
