--- a/www/css/login.css
+++ b/www/css/login.css
@@ -24,6 +24,32 @@ table tr td label {
 	text-align: right;
 }
 
-table tr td input,label,button {
-	height: 100%;
+table tr td input,label {
+	box-sizing: content-box;
+	height: 36px;
+	line-height: 36px;
+}
+
+.loginRow{
+	position: relative;
+}
+
+.loginBtn{
+	height: 36px;
+	text-align: center;
+	font-size: 20px;
+	line-height: 100%;
+}
+
+.registBtn{
+	position: absolute;
+	height: 36px;
+	line-height: 36px;
+	font-size: 12px;
+	color: #fff;
+	right: 5px;
+}
+
+.registBtn:hover{
+	text-decoration: underline;
 }
